--- a/index.html
+++ b/index.html
@@ -481,11 +481,30 @@
 </html>
 
 
+<!-- // github add new  -->
 
-
-
-
-
+<section class="github-stats section" id="github-stats">
+  <!-- <h2 class="section__title">GitHub Calendar</h2>
+  <span class="section__subtitle">Consistency is the key</span> -->
+  <div class="container">
+      <div class="row justify-content-center mb-5 pb-3">
+      <div id="h12" class="col-md-7 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Github</h1>
+        <h2 class="mb-4">Github Calander</h2>
+      </div>
+  </div>
+  <div class="github-images">
+    <img
+      src="https://github-readme-stats.vercel.app/api?username=ChanduDhakad&show_icons=true&theme=default"
+      alt="ChanduDhakad-github-stats"
+    />
+    <img
+      src="https://github-readme-streak-stats.herokuapp.com/?user=ChanduDhakad&theme=default"
+      alt="ChanduDhakad-github-current-streak-stats"
+    />
+  </div>
+  <div class="calendar"></div>
+</section>
 
 <!-- ===============github stats==================== -->
 <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
@@ -495,6 +514,20 @@
   rel="stylesheet"
   href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
 />
+
+
+
+//
+
+
+
+
+
+
+
+
+
+
 
 <!-- Prepare a container for your calendar. -->
 <div class="calendar">
