--- a/index.html
+++ b/index.html
@@ -44,12 +44,23 @@
 
             <li>
               <a
-                href="./images/Chandra-Prakash-Dhaker .pdf"
+                onclick="window.open('https://drive.google.com/file/d/1INBl-JoZLR8-2cWaxvqlCGEndI-WetWp/view?usp=share_link','_blank')"
+                class="resume-button"
+                href="images/Chandra-Prakash-Dhaker-Resume.pdf"
+                download="Chandra-Prakash-Dhaker-Resume"
+                title="download"
+                >Resume</a
+              >
+
+              <!--             
+              <a
+                href="https://drive.google.com/file/d/1INBl-JoZLR8-2cWaxvqlCGEndI-WetWp/view?usp=share_link"
                 target="_blank"
+                href="images/Chandra-Prakash-Dhaker-Resume.pdf"
                 download
               >
                 Resume</a
-              >
+              > -->
             </li>
 
             <i class="fas fa-times" onclick="closemenu()"></i>
@@ -371,8 +382,6 @@
       </div>
     </div>
 
-
-    
     <!--==================== Statistic ====================-->
     <section class="skills section" id="statistic">
       <h2 class="section__title">Statistics</h2>
@@ -502,9 +511,6 @@
   </div>
 </section>
 
-
-
-
 <!-- ===============github stats==================== -->
 <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
@@ -541,11 +547,7 @@
           ></a>
         </div>
 
-        <a
-          href="./images/Chandra-Prakash-Dhaker .pdf"
-          download
-          class="btn btn2"
-          target="_blank"
+        <a href="./images/c" download class="btn btn2" target="_blank"
           >Downlod Resume</a
         >
       </div>
