--- a/index.html
+++ b/index.html
@@ -547,7 +547,11 @@
           ></a>
         </div>
 
-        <a href="./images/c" download class="btn btn2" target="_blank"
+        <a
+          href="./images/Chandra-Prakash-Dhaker-Resume.pdf"
+          download
+          class="btn btn2"
+          target="_blank"
           >Downlod Resume</a
         >
       </div>
