--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       src="https://kit.fontawesome.com/da14163475.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
   </head>
   <body>
     <!-- header section -->
@@ -260,9 +261,22 @@
             <i class="fa-brands fa-github"></i>
             <h2>GitHub</h2>
           </div>
+        
+
+          
+
+        <div>
+          <i class="fa-brands fa-aws"></i>
+          <h2>Aws</h2>
         </div>
 
-        <!-- yha tka h apurni vali -->
+        <div>
+          <i class="fa-brands fa-git"></i>
+          <h2>Git</h2>
+        </div>
+      </div>
+
+
       </div>
     </div>
 
