--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="./images/profilenew.jpeg" alt="" />
+            <img src="./images/9.jpg" alt="" />
           </div>
           <div class="about-col-2">
             <h1 style="margin: 20px 0px 30px 0px" class="sub-title">
@@ -334,7 +334,33 @@
             </div>
             <!-- https://masaiproject2.netlify.app/ -->
           </div>
+
+
+
+
           <div class="work">
+            <img src="./images/callbuddy.jpg" alt="" />
+            <div class="layer">
+              <h3>Customer services Center</h3>
+              <p>
+                Online customer service system project is useful for providing feedback system for telecom companies, other organizations for improving product services and get in contact with customers to improve there business
+                <br />
+                Tech used:Java,MySQL,HTML,CSS,JAVASCRIPT.
+              </p>
+              <p style="display: flex; gap: 10px">
+                <a href="https://github.com/sahillagad/rude-coil-884"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+                <a href="https://drive.google.com/file/d/1c5OT19HNW-HN2FSOyUUnwWu7wAB0ow_N/view?usp=sharing"><i class="fa-sharp fa-solid fa-globe"></i></a>
+              </p>
+            </div>
+          </div>
+
+
+
+
+
+          <!-- <div class="work">
             <img src="./images/fordApp.png" alt="" />
             <div class="layer">
               <h3>mini Food App</h3>
@@ -351,7 +377,30 @@
                 <a href=""><i class="fa-sharp fa-solid fa-globe"></i></a>
               </p>
             </div>
+          </div> -->
+
+
+          <div class="work">
+            <img src="./images/rombus.png" alt="" />
+            <div class="layer">
+              <h3>Online Bus Reservation System </h3>
+              <p>
+                The Online Bus Ticket Reservation System is a web-based program that allows customers to check bus ticket availability, purchase bus tickets, and pay for bus tickets all in one place
+                <br />
+                Tech used: HTML,CSS,JS,API,Database.
+              </p>
+              <p style="display: flex; gap: 10px">
+                <a href="https://github.com/ChanduDhakad/graceful-cellar-3130"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+                <a href="https://drive.google.com/file/d/1pumg-y6cLvFxhjV83l3b5hNCO7XYRulR/view?usp=share_link"
+                  ><i class="fa-sharp fa-solid fa-globe"></i
+                ></a>
+              </p>
+            </div>
           </div>
+
+
 
           <div class="work">
             <img src="./images/newapp.png" alt="" />
@@ -373,25 +422,21 @@
               </p>
             </div>
           </div>
-          <div class="work">
-            <img src="./images/weather app.png" alt="" />
-            <div class="layer">
-              <h3>weather app</h3>
-              <p>
-                A Weather app here we can search any city weather information
-                <br />
-                Tech used: HTML,CSS,JS,API,Database.
-              </p>
-              <p style="display: flex; gap: 10px">
-                <a href="https://github.com/ChanduDhakad"
-                  ><i class="fa-brands fa-github"></i
-                ></a>
-                <a href="https://indradeva.netlify.app/"
-                  ><i class="fa-sharp fa-solid fa-globe"></i
-                ></a>
-              </p>
-            </div>
-          </div>
+
+
+
+
+
+
+
+
+
+
+        
+
+
+
+
         </div>
       </div>
     </div>
