--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </div>
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Hibernet</h2>
+            <h2>Hibernate</h2>
           </div>
           <div>
             <i class="fa-solid fa-book"></i>
@@ -466,7 +466,7 @@
             <h3>Hours</h3>
             <p style="margin-top: -30px">of coding</p>
           </div>
-          <div class="statistic__circle">
+          <!-- <div class="statistic__circle">
             <div class="container round">
               <div class="circular">
                 <div class="inner"></div>
@@ -483,7 +483,7 @@
             </div>
             <h3>Leetcode</h3>
             <p style="margin-top: -30px">problems</p>
-          </div>
+          </div> -->
           <div class="statistic__circle">
             <div class="container round">
               <div class="circular">
@@ -506,7 +506,7 @@
             <div class="container round">
               <div class="circular">
                 <div class="inner"></div>
-                <div class="number">1500+</div>
+                <div class="number">200+</div>
                 <div class="circle">
                   <div class="bar left">
                     <div class="progress"></div>
