add no of project

--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>1000+ </span><br />
+                  <span>1200+ </span><br />
                   hourse of coding
                 </li>
                 <li>
-                  <span>300+</span><br />
+                  <span>1300+</span><br />
                   problems solved in DSA
                 </li>
                 <li>
-                  <span>01+</span><br />
-                  companies worked
+                  <span>04 </span><br />
+                  Project complete
                 </li>
               </ul>
             </div>
@@ -144,7 +144,7 @@
               <ul>
                 <li>
                   <span>Full Stack Web Developer(Full Time)</span><br />
-                  Masai School (April 2022 - Nov 2022)
+                  Masai School (April 2022 - March 2022)
                 </li>
                 <li>
                   <span>B.Tech(Electrical - Engineering) </span><br />
