--- a/index.html
+++ b/index.html
@@ -131,14 +131,15 @@
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
+                  <span>Junior Software Enginner</span><br />
+                  Trak N Tell Gurugram,Haryana(Jul 2023 - Jul 2023)
+                </li>
+                <li>                  
                   <span>Shift Incharge Engineer</span><br />
                   Kaycee Energy and infra Pvt. Ltd. Kota,Rajashan (Aug 2021 -
                   May 2022)
                 </li>
-                <li>
-                  <span>Junior Software Enginner</span><br />
-                  Tark N Tell Gurugram,Haryana(Jul 2023 - Jul 2023)
-                </li>
+               
               </ul>
             </div>
 
