--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About </a></li>
             <li><a href="#Skills">Skill</a></li>
+            <li><a href="#professional-experience">experience</a></li>
             <li><a href="#portfolio">Project</a></li>
             <li><a href="#contact">Contact</a></li>
 
@@ -133,13 +134,28 @@
                 <li>
                   <span>Junior Software Enginner</span><br />
                   Trak N Tell Gurugram,Haryana(Jul 2023 - Jul 2023)
+                  <p>
+                    • Developed interactive and responsive web pages using Java
+                  </p>
+                  <p>• servlets, HTML, CSS, JavaScript, AJAX, and MySQL</p>
+                  <p>• Incorporated EMI functionality into the web app</p>
+                  <p>
+                    • Enabled real-time AJAX updates, enhancing interactions and
+                    server efficiency
+                  </p>
                 </li>
-                <li>                  
+                <li>
                   <span>Shift Incharge Engineer</span><br />
                   Kaycee Energy and infra Pvt. Ltd. Kota,Rajashan (Aug 2021 -
                   May 2022)
+                  <p>
+                    • Headed an 8-member team in 132 KV substation operations
+                  </p>
+                  <p>
+                    • managed a team of technicians for safe, efficient
+                    substation operations
+                  </p>
                 </li>
-               
               </ul>
             </div>
 
@@ -220,6 +236,47 @@
       </div>
     </div>
 
+    <!--============ professional Experience  =============-->
+
+    <div id="professional-experience">
+      <h1 style="text-align: center" class="sub-title">
+        Professional Experience
+      </h1>
+      <div class="container">
+        <div class="card-body">
+          <h3 class="namee">Junior Software Engineer</h3>
+          <h4 class="date">
+            Trak N Tell Gurugram, Haryana (Jul 2023 - Jul 2023)
+          </h4>
+          <div class="description">
+            <p>
+              • Developed interactive and responsive web pages using Java
+              servlets, HTML, CSS, JavaScript, AJAX, and MySQL
+            </p>
+            <p>• Incorporated EMI functionality into the web app</p>
+            <p>
+              • Enabled real-time AJAX updates, enhancing interactions and
+              server efficiency
+            </p>
+          </div>
+        </div>
+        <div class="card-body">
+          <h3 class="namee">Shift Incharge Engineer</h3>
+          <h4 class="date">
+            Kaycee Energy and Infra Pvt. Ltd. Kota, Rajasthan (Aug 2021 - May
+            2022)
+          </h4>
+          <div class="description">
+            <p>• Headed an 8-member team in 132 KV substation operations</p>
+            <p>
+              • managed a team of technicians for safe, efficient substation
+              operations
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- <!=============== portfolio ============================-> -->
 
     <div id="portfolio">
@@ -228,6 +285,87 @@
         <p style="text-align: center">My recent works</p>
 
         <div class="work-list">
+          <div class="work">
+            <img src="./images/eCommercLogo.png" alt="" />
+            <div class="layer">
+              <h3>E-commerce Application</h3>
+              <p>
+                The E-commerce Application is a web-based program that allows
+                customers to shop wide range of products, make purchases,and
+                manage their shopping cart.<br />
+                Tech used: Java,Spring data JPA,Spring Boot,RESTful
+                API,Maven,Hibernate,Swagger,MySQl,Lombok.
+              </p>
+              <p style="display: flex; gap: 10px">
+                <a
+                  href="https://github.com/ChanduDhakad/E-commerece"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                  href="https://drive.google.com/file/d/1C_b6w9mCr9rrBqTKAbBiombcGzqrOFG7/view?usp=sharing"
+                  target="_blank"
+                  ><i class="fa-sharp fa-solid fa-globe"></i
+                ></a>
+              </p>
+            </div>
+          </div>
+
+          <div class="work">
+            <img src="./images/rombus.png" alt="" />
+            <div class="layer">
+              <h3>Online Bus Reservation System</h3>
+              <p>
+                The Online Bus Ticket Reservation System is a web-based program
+                that allows customers to check bus ticket availability, purchase
+                bus tickets <br />
+                Tech used: Java,Spring data JPA,Spring Boot,RESTful
+                API,Maven,Hibernate,Swagger,MySQl,Lombok.
+              </p>
+              <p style="display: flex; gap: 10px">
+                <a
+                  href="https://github.com/ChanduDhakad/graceful-cellar-3130"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                  href="https://drive.google.com/file/d/1701cu1StkQjFsU00CJwUCMFb_mInWMe1/view?usp=share_link"
+                  target="_blank"
+                  ><i class="fa-sharp fa-solid fa-globe"></i
+                ></a>
+              </p>
+            </div>
+          </div>
+
+          <div class="work">
+            <img src="./images/callbuddy.jpg" alt="" />
+            <div class="layer">
+              <h3>Customer services Center</h3>
+              <p>
+                The Customer services Center is a web-based program that allows
+                customers to check their complain and check their status
+                <br />
+                Tech used: Java,Spring data JPA,Spring Boot,RESTful
+                API,Maven,Hibernate,Swagger,MySQl,Lombok.
+              </p>
+
+              <p style="display: flex; gap: 10px; padding-bottom: 20px">
+                <a
+                  href="https://github.com/sahillagad/rude-coil-884"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                  href="https://drive.google.com/file/d/1IzQP5FYx7WliFMEN504yD713fBu1MJNA/view?usp=share_link"
+                  target="_blank"
+                  ><i class="fa-sharp fa-solid fa-globe"></i
+                ></a>
+              </p>
+            </div>
+          </div>
+
+       
+
           <div class="work">
             <!-- <div id="work-div"> -->
             <img id="india-mart" src="./images/indi.png" alt="" />
@@ -243,11 +381,13 @@
               </p>
 
               <p style="display: flex; gap: 10px">
-                <a href="https://github.com/skypassboy/India-mart-clone"
+                <a
+                  href="https://github.com/skypassboy/India-mart-clone"
+                  target="_blank"
                   ><i class="fa-brands fa-github"></i
                 ></a>
 
-                <a href="https://project1masai.netlify.app/"
+                <a href="https://project1masai.netlify.app/" target="_blank"
                   ><i class="fa-sharp fa-solid fa-globe"></i
                 ></a>
               </p>
@@ -264,55 +404,12 @@
                 Tech used: HTML,CSS,JAVASCRIPT,API.
               </p>
               <p style="display: flex; gap: 10px">
-                <a href="https://github.com/ChanduDhakad/misty-act-3451"
-                  ><i class="fa-brands fa-github"></i
-                ></a>
-                <a href="https://masaiproject2.netlify.app/"
-                  ><i class="fa-sharp fa-solid fa-globe"></i
-                ></a>
-              </p>
-            </div>
-            <!-- https://masaiproject2.netlify.app/ -->
-          </div>
-
-          <div class="work">
-            <img src="./images/callbuddy.jpg" alt="" />
-            <div class="layer">
-              <h3>Customer services Center</h3>
-              <p>
-                The Customer services Center is a web-based program that allows
-                customers to check their complain and check their status
-                <br />
-                Tech used:Java,MySQL,HTML,CSS,JAVASCRIPT.
-              </p>
-              <p style="display: flex; gap: 10px; padding-bottom: 20px">
-                <a href="https://github.com/sahillagad/rude-coil-884"
-                  ><i class="fa-brands fa-github"></i
-                ></a>
                 <a
-                  href="https://drive.google.com/file/d/1IzQP5FYx7WliFMEN504yD713fBu1MJNA/view?usp=share_link"
-                  ><i class="fa-sharp fa-solid fa-globe"></i
-                ></a>
-              </p>
-            </div>
-          </div>
-
-          <div class="work">
-            <img src="./images/rombus.png" alt="" />
-            <div class="layer">
-              <h3>Online Bus Reservation System</h3>
-              <p>
-                The Online Bus Ticket Reservation System is a web-based program
-                that allows customers to check bus ticket availability, purchase
-                bus tickets <br />
-                Tech used: HTML,CSS,JS,API,Database.
-              </p>
-              <p style="display: flex; gap: 10px">
-                <a href="https://github.com/ChanduDhakad/graceful-cellar-3130"
+                  href="https://github.com/ChanduDhakad/misty-act-3451"
+                  target="_blank"
                   ><i class="fa-brands fa-github"></i
                 ></a>
-                <a
-                  href="https://drive.google.com/file/d/1701cu1StkQjFsU00CJwUCMFb_mInWMe1/view?usp=share_link"
+                <a href="https://masaiproject2.netlify.app/" target="_blank"
                   ><i class="fa-sharp fa-solid fa-globe"></i
                 ></a>
               </p>
@@ -330,10 +427,12 @@
                 Tech used: HTML,CSS,JAVASCRIPT,API.
               </p>
               <p style="display: flex; gap: 10px">
-                <a href="https://github.com/ChanduDhakad/new-app"
+                <a
+                  href="https://github.com/ChanduDhakad/new-app"
+                  target="_blank"
                   ><i class="fa-brands fa-github"></i
                 ></a>
-                <a href="https://cpnewapp.netlify.app"
+                <a href="https://cpnewapp.netlify.app" target="_blank"
                   ><i class="fa-sharp fa-solid fa-globe"></i
                 ></a>
               </p>
