--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About </a></li>
             <li><a href="#Skills">Skill</a></li>
-            <li><a href="#professional-experience">experience</a></li>
+            <li><a href="#professional-experience">Experience</a></li>
             <li><a href="#portfolio">Project</a></li>
             <li><a href="#contact">Contact</a></li>
 
